Closed Bug 1354465 Opened 7 years ago Closed 7 years ago

Leaving MDSM::DORMANT state should not trigger throbber UI.

Categories

(Core :: Audio/Video: Playback, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla55
Tracking Status
firefox55 --- fixed

People

(Reporter: kaku, Assigned: kaku)

References

Details

Attachments

(2 files)

Spawn from bug 1348085 comment 4.
Assignee: nobody → kaku
Status: NEW → ASSIGNED
Comment on attachment 8855691 [details]
Bug 1354465 P1 - dispatch a mozvideoonlyseekbegin event while starting a video-only seek;

https://reviewboard.mozilla.org/r/127570/#review130280

::: dom/media/MediaDecoderStateMachine.cpp:527
(Diff revision 1)
>    {
> -    // Do nothing since we won't resume decoding until exiting dormant.
> +    // We're in DORMANT state so we don't need to resume immediately.
> +    // However, we still need to notify the reader that we don't want to use
> +    // null decoder anymore, so that the reader will create a standard video
> +    // decoder next time the playback is restarted again.
> +    MOZ_ASSERT(mMaster->mVideoDecodeSuspended);

We will miss the "mozexitvideosuspend" event this way. I think we should add a new event, "mozvideoonlyseekbegin" to pair with "mozvideoonlyseekcompleted" which will notify the throbber to begin and stop.
Attachment #8855691 - Flags: review?(jwwang) → review-
Blocks: 1348085
Comment on attachment 8855691 [details]
Bug 1354465 P1 - dispatch a mozvideoonlyseekbegin event while starting a video-only seek;

https://reviewboard.mozilla.org/r/127570/#review130326
Attachment #8855691 - Flags: review?(jwwang) → review+
Comment on attachment 8855733 [details]
Bug 1354465 P2 - use mozvideoonlyseekbegin event to start throbber timer;

https://reviewboard.mozilla.org/r/127640/#review130328
Attachment #8855733 - Flags: review?(jwwang) → review+
Summary: Implement HandleResumeVideoDecoding() for MDSM::DORMANT state → Leaving MDSM::DORMANT state should not trigger throbber UI.
Set this bug P1 since it blocks bug 1348085.
Priority: -- → P1
Blocks: 1355031
Comment on attachment 8855733 [details]
Bug 1354465 P2 - use mozvideoonlyseekbegin event to start throbber timer;

https://reviewboard.mozilla.org/r/127640/#review131158
Attachment #8855733 - Flags: review?(jaws) → review+
Thanks for the review!
Pushed by tkuo@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/bc63b56a88dd
P1 - dispatch a mozvideoonlyseekbegin event while starting a video-only seek; r=jwwang
https://hg.mozilla.org/integration/autoland/rev/e2c9182cddb1
P2 - use mozvideoonlyseekbegin event to start throbber timer; r=jaws,jwwang
https://hg.mozilla.org/mozilla-central/rev/bc63b56a88dd
https://hg.mozilla.org/mozilla-central/rev/e2c9182cddb1
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla55
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: