Bug 1354465 P1 - dispatch a mozvideoonlyseekbegin event while starting a video-only seek; r=jwwang

MozReview-Commit-ID: 6PjQs88vUV2